--- a/content/docs/learning-tracks/simple/getting-started/quick-start.mdx
+++ b/content/docs/learning-tracks/simple/getting-started/quick-start.mdx
@@ -99,17 +99,21 @@ You can customize:
 
 ## Start Your Agent
 
-Start your agent locally:
+Start your agent in development mode:
 
 ```bash
-bun start
+elizaos dev
 ```
 
-Your agent will start and you can access the web chat at:
+You'll see output like:
+```
+🤖 Starting ElizaOS...
+✅ Database connected
+✅ Plugins loaded
+🌐 Web interface: http://localhost:3000
+```
 
-```
-http://localhost:3000
-```
+Your agent is now running!
 
 </Step>
 
