--- a/content/docs/guides/prompt-templates-customization.mdx
+++ b/content/docs/guides/prompt-templates-customization.mdx
@@ -23,40 +23,30 @@ ElizaOS uses a sophisticated template system that controls how agents process an
     Controls whether the agent should respond to incoming messages:
     
     ```typescript
-    export const shouldRespondTemplate = `<task>
-    Decide on behalf of {{agentName}} whether they should respond to the message, ignore it or stop the conversation.
-    </task>
-    
-    <providers>
-    {{providers}}
-    </providers>
-    
-    <recentMessages>
-    {{recentMessages}}
-    </recentMessages>
-    
-    <instructions>
-    Decide if {{agentName}} should respond to or interact with the conversation.
-    
-    Response Guidelines:
-    - RESPOND: If message is directed at {{agentName}} or relevant to their role
-    - IGNORE: If message is not relevant or should be ignored
-    - STOP: If user asks {{agentName}} to be quiet or stop responding
-    
-    Consider:
-    - Message content relevance
-    - User's tone and intent
-    - {{agentName}}'s character and role
-    - Conversation context
-    </instructions>
-    
-    <output>
-    <response>
-      <name>{{agentName}}</name>
-      <reasoning>Brief explanation of decision</reasoning>
-      <action>RESPOND | IGNORE | STOP</action>
-    </response>
-    </output>`;
+    export const shouldRespondTemplate = `<task>Decide on behalf of {{agentName}} whether they should respond to the message, ignore it or stop the conversation.</task>
+
+<providers>
+{{providers}}
+</providers>
+
+<instructions>Decide if {{agentName}} should respond to or interact with the conversation.
+If the message is directed at or relevant to {{agentName}}, respond with RESPOND action.
+If a user asks {{agentName}} to be quiet, respond with STOP action.
+If {{agentName}} should ignore the message, respond with IGNORE action.</instructions>
+
+<output>
+Do NOT include any thinking, reasoning, or <think> sections in your response. 
+Go directly to the XML response format without any preamble or explanation.
+
+Respond using XML format like this:
+<response>
+  <name>{{agentName}}</name>
+  <reasoning>Your reasoning here</reasoning>
+  <action>RESPOND | IGNORE | STOP</action>
+</response>
+
+IMPORTANT: Your response must ONLY contain the <response></response> XML block above. Do not include any text, thinking, or reasoning before or after this XML block. Start your response immediately with <response> and end with </response>.
+</output>`;
     ```
   </Tab>
   
@@ -66,55 +56,63 @@ ElizaOS uses a sophisticated template system that controls how agents process an
     Generates the agent's response content and determines actions:
     
     ```typescript
-    export const messageHandlerTemplate = `<task>
-    Generate dialog and actions for the character {{agentName}}.
-    </task>
-    
-    <providers>
-    {{providers}}
-    </providers>
-    
-    <recentMessages>
-    {{recentMessages}}
-    </recentMessages>
-    
-    <availableActions>
-    {{actionNames}}
-    </availableActions>
-    
-    <instructions>
-    Write a thought and plan for {{agentName}} and decide what actions to take.
-    
-    CHARACTER CONTEXT:
-    - Name: {{agentName}}
-    - Bio: {{bio}}
-    - Personality: {{adjective}}
-    - Current Topic: {{topic}}
-    
-    ACTION ORDERING RULES:
-    - Actions execute in the ORDER listed
-    - REPLY should come FIRST to acknowledge the user
-    - Common patterns:
-      * Simple response: REPLY
-      * With information: REPLY,KNOWLEDGE
-      * With task: REPLY,SEND_MESSAGE
-      * With tool: REPLY,CALL_MCP_TOOL
-    
-    RESPONSE GUIDELINES:
-    - Stay in character
-    - Be helpful and engaging
-    - Reference conversation context
-    - Use appropriate tone for platform
-    </instructions>
-    
-    <output>
-    <response>
-        <thought>Your internal reasoning process</thought>
-        <actions>ACTION1,ACTION2,ACTION3</actions>
-        <providers>PROVIDER1,PROVIDER2</providers>
-        <text>Your response to the user</text>
-    </response>
-    </output>`;
+    export const messageHandlerTemplate = `<task>Generate dialog and actions for the character {{agentName}}.</task>
+
+<providers>
+{{providers}}
+</providers>
+
+These are the available valid actions:
+<actionNames>
+{{actionNames}}
+</actionNames>
+
+<instructions>
+Write a thought and plan for {{agentName}} and decide what actions to take. Also include the providers that {{agentName}} will use to have the right context for responding and acting, if any.
+
+IMPORTANT ACTION ORDERING RULES:
+- Actions are executed in the ORDER you list them - the order MATTERS!
+- REPLY should come FIRST to acknowledge the user's request before executing other actions
+- Common patterns:
+  - For requests requiring tool use: REPLY,CALL_MCP_TOOL (acknowledge first, then gather info)
+  - For task execution: REPLY,SEND_MESSAGE or REPLY,EVM_SWAP_TOKENS (acknowledge first, then do the task)
+  - For multi-step operations: REPLY,ACTION1,ACTION2 (acknowledge first, then complete all steps)
+- REPLY is used to acknowledge and inform the user about what you're going to do
+- Follow-up actions execute the actual tasks after acknowledgment
+- Use IGNORE only when you should not respond at all
+
+IMPORTANT PROVIDER SELECTION RULES:
+- If the message mentions images, photos, pictures, attachments, or visual content, OR if you see "(Attachments:" in the conversation, you MUST include "ATTACHMENTS" in your providers list
+- If the message asks about or references specific people, include "ENTITIES" in your providers list  
+- If the message asks about relationships or connections between people, include "RELATIONSHIPS" in your providers list
+- If the message asks about facts or specific information, include "FACTS" in your providers list
+- If the message asks about the environment or world context, include "WORLD" in your providers list
+- If you need external knowledge, information, or context beyond the current conversation to provide a helpful response, include "KNOWLEDGE" in your providers list
+
+First, think about what you want to do next and plan your actions. Then, write the next message and include the actions you plan to take.
+</instructions>
+
+<keys>
+"thought" should be a short description of what the agent is thinking about and planning.
+"actions" should be a comma-separated list of the actions {{agentName}} plans to take based on the thought, IN THE ORDER THEY SHOULD BE EXECUTED (if none, use IGNORE, if simply responding with text, use REPLY)
+"providers" should be a comma-separated list of the providers that {{agentName}} will use to have the right context for responding and acting (NEVER use "IGNORE" as a provider - use specific provider names like ATTACHMENTS, ENTITIES, FACTS, KNOWLEDGE, etc.)
+"text" should be the text of the next message for {{agentName}} which they will send to the conversation.
+</keys>
+
+<output>
+Do NOT include any thinking, reasoning, or <think> sections in your response. 
+Go directly to the XML response format without any preamble or explanation.
+
+Respond using XML format like this:
+<response>
+    <thought>Your thought here</thought>
+    <actions>ACTION1,ACTION2</actions>
+    <providers>PROVIDER1,PROVIDER2</providers>
+    <text>Your response text here</text>
+</response>
+
+IMPORTANT: Your response must ONLY contain the <response></response> XML block above. Do not include any text, thinking, or reasoning before or after this XML block. Start your response immediately with <response> and end with </response>.
+</output>`;
     ```
   </Tab>
   
@@ -124,35 +122,83 @@ ElizaOS uses a sophisticated template system that controls how agents process an
     For creating social media posts or proactive content:
     
     ```typescript
-    export const postCreationTemplate = `<task>
-    Create a social media post for {{agentName}} about {{topic}}.
-    </task>
+    export const postCreationTemplate = `# Task: Create a post in the voice and style and perspective of {{agentName}} @{{twitterUserName}}.
+
+Example task outputs:
+1. A post about the importance of AI in our lives
+<response>
+  <thought>I am thinking about writing a post about the importance of AI in our lives</thought>
+  <post>AI is changing the world and it is important to understand how it works</post>
+  <imagePrompt>A futuristic cityscape with flying cars and people using AI to do things</imagePrompt>
+</response>
+
+2. A post about dogs
+<response>
+  <thought>I am thinking about writing a post about dogs</thought>
+  <post>Dogs are man's best friend and they are loyal and loving</post>
+  <imagePrompt>A dog playing with a ball in a park</imagePrompt>
+</response>
+
+3. A post about finding a new job
+<response>
+  <thought>Getting a job is hard, I bet there's a good tweet in that</thought>
+  <post>Just keep going!</post>
+  <imagePrompt>A person looking at a computer screen with a job search website</imagePrompt>
+</response>
+
+{{providers}}
+
+Write a post that is {{adjective}} about {{topic}} (without mentioning {{topic}} directly), from the perspective of {{agentName}}. Do not add commentary or acknowledge this request, just write the post.
+Your response should be 1, 2, or 3 sentences (choose the length at random).
+Your response should not contain any questions. Brief, concise statements only. The total character count MUST be less than 280. No emojis. Use \n\n (double spaces) between statements if there are multiple statements in your response.
+
+Your output should be formatted in XML like this:
+<response>
+  <thought>Your thought here</thought>
+  <post>Your post text here</post>
+  <imagePrompt>Optional image prompt here</imagePrompt>
+</response>
+
+The "post" field should be the post you want to send. Do not including any thinking or internal reflection in the "post" field.
+The "imagePrompt" field is optional and should be a prompt for an image that is relevant to the post. It should be a single sentence that captures the essence of the post. ONLY USE THIS FIELD if it makes sense that the post would benefit from an image.
+The "thought" field should be a short description of what the agent is thinking about before responding, inlcuding a brief justification for the response. Includate an explanation how the post is relevant to the topic but unique and different than other posts.
+
+Do NOT include any thinking, reasoning, or <think> sections in your response. 
+Go directly to the XML response format without any preamble or explanation.
+
+IMPORTANT: Your response must ONLY contain the <response></response> XML block above. Do not include any text, thinking, or reasoning before or after this XML block. Start your response immediately with <response> and end with </response>.`;
+    ```
+  </Tab>
+  <Tab value="imageDescription">
+    **imageDescriptionTemplate** - Image Analysis
     
-    <providers>
-    {{providers}}
-    </providers>
+    For analyzing and describing images in attachments:
     
-    <instructions>
-    Create an engaging social media post that:
-    - Reflects {{agentName}}'s personality
-    - Is appropriate for the platform
-    - Includes relevant hashtags if applicable
-    - Encourages engagement
-    
-    Platform considerations:
-    - Twitter: 280 characters, hashtags, mentions
-    - LinkedIn: Professional tone, longer form
-    - Discord: Casual, community-focused
-    - General: Adaptable to platform
-    </instructions>
-    
-    <output>
-    <response>
-        <thought>Post strategy and reasoning</thought>
-        <text>The actual post content</text>
-        <hashtags>#relevant #hashtags</hashtags>
-    </response>
-    </output>`;
+    ```typescript
+    export const imageDescriptionTemplate = `<task>Analyze the provided image and generate a comprehensive description with multiple levels of detail.</task>
+
+<instructions>
+Carefully examine the image and provide:
+1. A concise, descriptive title that captures the main subject or scene
+2. A brief summary description (1-2 sentences) highlighting the key elements
+3. An extensive, detailed description that covers all visible elements, composition, lighting, colors, mood, and any other relevant details
+
+Be objective and descriptive. Focus on what you can actually see in the image rather than making assumptions about context or meaning.
+</instructions>
+
+<output>
+Do NOT include any thinking, reasoning, or <think> sections in your response. 
+Go directly to the XML response format without any preamble or explanation.
+
+Respond using XML format like this:
+<response>
+  <title>A concise, descriptive title for the image</title>
+  <description>A brief 1-2 sentence summary of the key elements in the image</description>
+  <text>An extensive, detailed description covering all visible elements, composition, lighting, colors, mood, setting, objects, people, activities, and any other relevant details you can observe in the image</text>
+</response>
+
+IMPORTANT: Your response must ONLY contain the <response></response> XML block above. Do not include any text, thinking, or reasoning before or after this XML block. Start your response immediately with <response> and end with </response>.
+</output>`;
     ```
   </Tab>
 </Tabs>
@@ -311,19 +357,66 @@ Tone Considerations:
 </output>`;
 ```
 
+## Other Core Templates
+
+### Boolean Footer Template
+
+Used for simple yes/no decision prompts:
+
+```typescript
+export const booleanFooter = 'Respond with only a YES or a NO.';
+```
+
+## Template Composition Functions
+
+### composePromptFromState
+
+This utility function combines state values with templates:
+
+```typescript
+import { composePromptFromState } from '@elizaos/core';
+
+// Basic usage
+const prompt = composePromptFromState({
+  state,
+  template: messageHandlerTemplate,
+});
+
+// The function replaces template variables with state values:
+// {{agentName}} -> state.values.agentName
+// {{providers}} -> state.text (formatted provider data)
+// {{recentMessages}} -> state.values.recentMessages
+// {{actionNames}} -> state.values.actionNames
+// {{topic}} -> state.values.topic
+// {{adjective}} -> state.values.adjective
+// And any other values in state.values
+```
+
 ## Character-Specific Template Customization
 
-### Technical Support Agent
+You can override default templates by adding them to your character definition:
+
+```typescript
+// character.json
+{
+  "name": "TechSupport",
+  "bio": ["I'm a technical support specialist helping users with software and hardware issues"],
+  "templates": {
+    "shouldRespondTemplate": "<custom should respond template>",
+    "messageHandlerTemplate": "<custom message handler template>",
+    "postCreationTemplate": "<custom post creation template>"
+  }
+}
+```
+
+### Technical Support Agent Example
 
 ```json
 {
   "name": "TechSupport",
   "bio": ["I'm a technical support specialist helping users with software and hardware issues"],
   "templates": {
-    "shouldRespondTemplate": "{{shouldRespondTemplate}}",
-    "messageHandlerTemplate": `<task>
-    Provide technical support as {{agentName}}.
-    </task>
+    "messageHandlerTemplate": "<task>\nProvide technical support as {{agentName}}.\n</task>
     
     <providers>
     {{providers}}
@@ -373,16 +466,55 @@ Tone Considerations:
 }
 ```
 
-### Sales Assistant
+### Custom Template in Character Definition
+
+Templates can be embedded directly in your character configuration:
+
+```typescript
+// In your character definition file
+export const myCharacter = {
+  name: "MyAgent",
+  bio: ["I am a specialized agent"],
+  templates: {
+    // Override the message handler template
+    messageHandlerTemplate: `<task>Generate specialized response for {{agentName}}.</task>
+
+<providers>
+{{providers}}
+</providers>
+
+<instructions>
+Specialized instructions for my agent...
+</instructions>
+
+<output>
+<response>
+    <thought>{{agentName}}'s analysis</thought>
+    <actions>REPLY</actions>
+    <providers>KNOWLEDGE</providers>
+    <text>Specialized response</text>
+</response>
+</output>`,
+    
+    // Override should respond template
+    shouldRespondTemplate: `<task>Custom decision logic for {{agentName}}</task>
+<!-- Custom template content -->`,
+    
+    // Override post creation template  
+    postCreationTemplate: `<task>Create specialized content for {{agentName}}</task>
+<!-- Custom template content -->`
+  }
+};
+```
+
+### Sales Assistant Example
 
 ```json
 {
   "name": "SalesBot",
   "bio": ["I'm a sales assistant helping customers find the right products"],
   "templates": {
-    "messageHandlerTemplate": `<task>
-    Provide sales assistance as {{agentName}}.
-    </task>
+    "messageHandlerTemplate": "<task>\nProvide sales assistance as {{agentName}}.\n</task>
     
     <providers>
     {{providers}}
@@ -430,9 +562,24 @@ Tone Considerations:
         </products>
         <nextSteps>Clear next steps for customer</nextSteps>
     </response>
-    </output>`
+    </output>"
   }
 }
+```
+
+### Runtime Template Access
+
+Templates are accessed through the runtime's character object:
+
+```typescript
+// In an action or provider
+const template = runtime.character.templates?.messageHandlerTemplate 
+  || messageHandlerTemplate; // fallback to default
+
+const prompt = composePromptFromState({
+  state,
+  template
+});
 ```
 
 ### Creative Writing Assistant
