--- a/content/docs/plugins/plugin-registry.mdx
+++ b/content/docs/plugins/plugin-registry.mdx
@@ -3,616 +3,608 @@ title: Plugin Registry
 description: Complete catalog of available ElizaOS plugins and their capabilities
 ---
 
-The ElizaOS Plugin Registry provides a centralized location for discovering and managing the 130+
-community-contributed plugins. This comprehensive ecosystem includes everything from core
-functionality to specialized integrations.
+The ElizaOS Plugin Registry provides a centralized location for discovering and using plugins that extend your agents' capabilities. The plugin ecosystem is growing with contributions from developers worldwide, covering core functionality, AI integrations, and specialized features.
 
 ## Core Plugins
 
 ### Foundation Plugins
 
+These plugins provide essential functionality for ElizaOS agents:
+
 <Cards>
-  <Card title="Bootstrap Plugin">
-    Essential initialization and setup functionality for all agents **Package**:
-    `@elizaos/plugin-bootstrap` **Installation**: `elizaos plugins add bootstrap` **Features**: -
-    Agent initialization - Runtime setup - Core system configuration - Basic health checks
-    **Dependencies**: None
+  <Card title="Bootstrap Plugin" href="/docs/plugins/plugin-bootstrap">
+    **Package**: `@elizaos/plugin-bootstrap`  
+    **Status**: Built-in (Required)
+    
+    Essential initialization and runtime functionality for all agents. This plugin provides core actions, evaluators, and providers that form the foundation of agent behavior.
+    
+    **Key Features**:
+    - Core actions: REPLY, IGNORE, FOLLOW_ROOM, MUTE_ROOM
+    - Image generation with GENERATE_IMAGE action  
+    - Message handling and response generation
+    - Attachment processing (images, documents)
+    - Event system integration
+    - Built-in providers for context, time, entities, and more
+    
+    **Example Usage**:
+    ```typescript
+    // Automatically included in all agents
+    const character = {
+      name: "MyAgent",
+      plugins: [
+        "@elizaos/plugin-bootstrap", // Always first
+        // ... other plugins
+      ]
+    }
+    ```
   </Card>
 
-<Card title="SQL Plugin">
-  Database connectivity and management for persistent storage **Package**: `@elizaos/plugin-sql`
-  **Installation**: `elizaos plugins add sql` **Features**: - PostgreSQL support - SQLite support -
-  Database migrations - Schema management - Connection pooling **Environment Variables**: -
-  `DATABASE_URL`: Database connection string - `DB_POOL_SIZE`: Connection pool size (default: 10)
-  **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
+  <Card title="SQL Plugin" href="/docs/plugins/plugin-sql">
+    **Package**: `@elizaos/plugin-sql`  
+    **Status**: Built-in (Required)
+    
+    Provides database connectivity with automatic schema migrations for plugins. Supports both PostgreSQL and PGLite (embedded SQLite alternative).
+    
+    **Key Features**:
+    - Dynamic schema migrations
+    - PostgreSQL and PGLite support
+    - Connection pooling
+    - Automatic table creation
+    - Plugin schema registration
+    
+    **Environment Variables**:
+    ```bash
+    # For PostgreSQL
+    POSTGRES_URL=postgresql://user:pass@localhost/db
+    
+    # For PGLite (local file)
+    PGLITE_PATH=./.eliza/.elizadb
+    ```
+    
+    **Example Plugin with Schema**:
+    ```typescript
+    export const myPlugin: Plugin = {
+      name: "my-plugin",
+      schema: {
+        // Drizzle ORM schema definition
+        myTable: pgTable('my_table', {
+          id: uuid('id').primaryKey(),
+          data: text('data')
+        })
+      }
+    }
+    ```
+  </Card>
+</Cards>
 
-<Card title="Dummy Services">
-  Testing and development utilities for plugin development **Package**:
-  `@elizaos/plugin-dummy-services` **Installation**: `elizaos plugins add dummy-services`
-  **Features**: - Mock service providers - Test data generation - Development utilities - Plugin
-  testing framework **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
+### Development Plugins
 
+<Cards>
   <Card title="Plugin Starter">
-    Template and utilities for creating new plugins **Package**: `@elizaos/plugin-starter`
-    **Installation**: `elizaos plugins add starter` **Features**: - Plugin template structure -
-    Example implementations - Development tools - Testing utilities **Dependencies**:
-    `@elizaos/plugin-bootstrap`
+    **Package**: `@elizaos/plugin-starter`  
+    **Status**: Template
+    
+    A template for creating new plugins. Copy this to start building your own plugin.
+    
+    **Features**:
+    - Complete plugin structure
+    - Example implementations
+    - TypeScript configuration
+    - Testing setup
+    
+    **Usage**:
+    ```bash
+    # Copy the starter
+    cp -r packages/plugin-starter packages/plugin-myservice
+    
+    # Update package.json name
+    # Implement your plugin logic
+    ```
+  </Card>
+
+  <Card title="Dummy Services Plugin">
+    **Package**: `@elizaos/plugin-dummy-services`  
+    **Status**: Development/Testing
+    
+    Provides mock services and utilities for testing plugin development.
+    
+    **Features**:
+    - Mock service implementations
+    - Test data generators  
+    - Development utilities
+    - Example service patterns
   </Card>
 </Cards>
 
 ## AI & Model Plugins
 
-### Large Language Models
+### Available AI Integrations
 
 <Cards>
   <Card title="OpenAI Plugin">
-    Integration with OpenAI's GPT models and API services **Package**: `@elizaos/plugin-openai`
-    **Installation**: `elizaos plugins add openai` **Features**: - GPT-4 and GPT-3.5 support - Text
-    generation - Embeddings - Function calling - Vision capabilities - DALL-E integration
-    **Environment Variables**: - `OPENAI_API_KEY`: Your OpenAI API key - `OPENAI_MODEL`: Model to
-    use (default: gpt-4) - `OPENAI_MAX_TOKENS`: Maximum tokens per request - `OPENAI_TEMPERATURE`:
-    Sampling temperature **Dependencies**: `@elizaos/plugin-bootstrap`
+    **Package**: `@elizaos/plugin-openai`  
+    **Version**: 1.0.6  
+    **Status**: Published on npm
+    
+    Integration with OpenAI's GPT models and API services.
+    
+    **Features**:
+    - GPT-4 and GPT-3.5 support
+    - Text generation and embeddings
+    - Function calling
+    - Vision capabilities with GPT-4V
+    - DALL-E image generation
+    
+    **Installation**:
+    ```bash
+    bun add @elizaos/plugin-openai
+    ```
+    
+    **Environment Variables**:
+    ```bash
+    OPENAI_API_KEY=sk-your-openai-key
+    OPENAI_MODEL=gpt-4  # or gpt-3.5-turbo
+    OPENAI_MAX_TOKENS=2000
+    OPENAI_TEMPERATURE=0.7
+    ```
+    
+    **Character Configuration**:
+    ```json
+    {
+      "name": "MyAgent",
+      "plugins": [
+        "@elizaos/plugin-bootstrap",
+        "@elizaos/plugin-sql",
+        "@elizaos/plugin-openai"
+      ],
+      "settings": {
+        "model": "gpt-4",
+        "temperature": 0.7
+      }
+    }
+    ```
   </Card>
 
-<Card title="Anthropic Plugin">
-  Integration with Anthropic's Claude models **Package**: `@elizaos/plugin-anthropic`
-  **Installation**: `elizaos plugins add anthropic` **Features**: - Claude 3 family support -
-  Advanced reasoning - Code generation - Analysis tasks - Function calling **Environment
-  Variables**: - `ANTHROPIC_API_KEY`: Your Anthropic API key - `ANTHROPIC_MODEL`: Model to use
-  (default: claude-3-sonnet) - `ANTHROPIC_MAX_TOKENS`: Maximum tokens per request **Dependencies**:
-  `@elizaos/plugin-bootstrap`
-</Card>
-
-<Card title="Google AI Plugin">
-  Integration with Google's Gemini models **Package**: `@elizaos/plugin-google-ai` **Installation**:
-  `elizaos plugins add google-ai` **Features**: - Gemini Pro and Ultra models - Multimodal
-  capabilities - Code generation - Function calling **Environment Variables**: - `GOOGLE_API_KEY`:
-  Google AI API key - `GOOGLE_MODEL`: Model to use (default: gemini-pro) **Dependencies**:
-  `@elizaos/plugin-bootstrap`
-</Card>
-
-  <Card title="Local LLM Plugin">
-    Support for locally hosted language models **Package**: `@elizaos/plugin-local-llm`
-    **Installation**: `elizaos plugins add local-llm` **Features**: - Ollama integration - Local
-    model serving - Custom model support - Privacy-focused inference **Environment Variables**: -
-    `OLLAMA_HOST`: Ollama server URL - `OLLAMA_MODEL`: Model name to use - `LOCAL_MODEL_PATH`: Path
-    to local model **Dependencies**: `@elizaos/plugin-bootstrap`
+  <Card title="Local AI Plugin">
+    **Package**: `@elizaos/plugin-local-ai`  
+    **Version**: 1.0.8  
+    **Status**: Published on npm
+    
+    Support for locally hosted language models using Ollama or compatible APIs.
+    
+    **Features**:
+    - Ollama integration
+    - Local model serving
+    - Privacy-focused inference
+    - Custom model support
+    
+    **Installation**:
+    ```bash
+    bun add @elizaos/plugin-local-ai
+    ```
+    
+    **Environment Variables**:
+    ```bash
+    OLLAMA_HOST=http://localhost:11434
+    OLLAMA_MODEL=llama2  # or any installed model
+    ```
+    
+    **Example Usage**:
+    ```typescript
+    const character = {
+      name: "LocalAgent",
+      plugins: [
+        "@elizaos/plugin-bootstrap",
+        "@elizaos/plugin-sql", 
+        "@elizaos/plugin-local-ai"
+      ],
+      settings: {
+        model: "llama2"
+      }
+    }
+    ```
   </Card>
 </Cards>
 
-### Embeddings & Vector Operations
+## TEE & Security Plugins  
 
 <Cards>
-  <Card title="Embeddings Plugin">
-    Text embeddings and vector operations **Package**: `@elizaos/plugin-embeddings`
-    **Installation**: `elizaos plugins add embeddings` **Features**: - Multiple embedding providers
-    - Vector similarity search - Semantic search - Knowledge base integration - Batch processing
-    **Supported Providers**: - OpenAI embeddings - Cohere embeddings - Sentence transformers - Local
-    embeddings **Dependencies**: `@elizaos/plugin-bootstrap`
+  <Card title="TEE Plugin">
+    **Package**: `@elizaos/plugin-tee`  
+    **Status**: Available
+    
+    Trusted Execution Environment support for secure and verifiable agent operations.
+    
+    **Features**:
+    - Secure computation
+    - Attestation support
+    - Private key management
+    - Verifiable execution
+    
+    **Use Cases**:
+    - Blockchain agents
+    - Secure data processing
+    - Verifiable AI operations
   </Card>
 
-  <Card title="Vector Database Plugin">
-    Vector storage and retrieval systems **Package**: `@elizaos/plugin-vector-db` **Installation**:
-    `elizaos plugins add vector-db` **Features**: - Pinecone integration - Weaviate support - Chroma
-    support - Local vector storage - Hybrid search **Environment Variables**: - `PINECONE_API_KEY`:
-    Pinecone API key - `WEAVIATE_URL`: Weaviate instance URL - `CHROMA_HOST`: Chroma server host
-    **Dependencies**: `@elizaos/plugin-embeddings`
-  </Card>
-</Cards>
-
-## Communication Plugins
-
-### Social Media Platforms
-
-<Cards>
-  <Card title="Discord Plugin">
-    Comprehensive Discord bot integration **Package**: `@elizaos/plugin-discord` **Installation**:
-    `elizaos plugins add discord` **Features**: - Bot commands - Message handling - Server
-    management - Voice channel support - Slash commands - Moderation tools **Environment
-    Variables**: - `DISCORD_BOT_TOKEN`: Discord bot token - `DISCORD_APPLICATION_ID`: Application ID
-    - `DISCORD_GUILD_ID`: Target guild ID **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-
-<Card title="Telegram Plugin">
-  Telegram bot integration and messaging **Package**: `@elizaos/plugin-telegram` **Installation**:
-  `elizaos plugins add telegram` **Features**: - Bot API integration - Message handling - Inline
-  keyboards - File uploads - Channel management - Group administration **Environment Variables**: -
-  `TELEGRAM_BOT_TOKEN`: Telegram bot token - `TELEGRAM_WEBHOOK_URL`: Webhook URL (optional)
-  **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
-
-<Card title="Twitter Plugin">
-  Twitter/X integration for social media engagement **Package**: `@elizaos/plugin-twitter`
-  **Installation**: `elizaos plugins add twitter` **Features**: - Tweet posting - Timeline reading -
-  Mention handling - Direct messages - Media uploads - Thread management **Environment Variables**:
-  - `TWITTER_API_KEY`: Twitter API key - `TWITTER_API_SECRET`: Twitter API secret -
-  `TWITTER_ACCESS_TOKEN`: Access token - `TWITTER_ACCESS_SECRET`: Access token secret
-  **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
-
-  <Card title="Reddit Plugin">
-    Reddit integration for community engagement **Package**: `@elizaos/plugin-reddit`
-    **Installation**: `elizaos plugins add reddit` **Features**: - Subreddit monitoring - Post
-    creation - Comment handling - Voting operations - Moderation tools **Environment Variables**: -
-    `REDDIT_CLIENT_ID`: Reddit client ID - `REDDIT_CLIENT_SECRET`: Reddit client secret -
-    `REDDIT_USERNAME`: Reddit username - `REDDIT_PASSWORD`: Reddit password **Dependencies**:
-    `@elizaos/plugin-bootstrap`
+  <Card title="RedPill Plugin">
+    **Package**: `@elizaos/plugin-redpill`  
+    **Version**: 1.0.3  
+    **Status**: Published on npm
+    
+    Advanced security and verification features for agents.
+    
+    **Installation**:
+    ```bash
+    bun add @elizaos/plugin-redpill
+    ```
   </Card>
 </Cards>
 
-### Business Communication
+## Creating Custom Plugins
 
-<Cards>
-  <Card title="Slack Plugin">
-    Slack workspace integration and bot functionality **Package**: `@elizaos/plugin-slack`
-    **Installation**: `elizaos plugins add slack` **Features**: - Workspace integration - Channel
-    management - Direct messaging - Slash commands - Interactive components - App notifications
-    **Environment Variables**: - `SLACK_BOT_TOKEN`: Slack bot token - `SLACK_SIGNING_SECRET`:
-    Signing secret - `SLACK_SOCKET_TOKEN`: Socket mode token **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
+### Plugin Development Workflow
 
-<Card title="Microsoft Teams Plugin">
-  Microsoft Teams integration **Package**: `@elizaos/plugin-teams` **Installation**: `elizaos
-  plugins add teams` **Features**: - Team collaboration - Channel messaging - Meeting integration -
-  File sharing - Notification handling **Environment Variables**: - `TEAMS_APP_ID`: Teams app ID -
-  `TEAMS_APP_SECRET`: Teams app secret - `TEAMS_TENANT_ID`: Azure tenant ID **Dependencies**:
-  `@elizaos/plugin-bootstrap`
-</Card>
+<Steps>
+  <Step>
+  ## Create Your Plugin
+  
+  Use the plugin starter template:
+  ```bash
+  # In the monorepo
+  cp -r packages/plugin-starter packages/plugin-myservice
+  cd packages/plugin-myservice
+  ```
+  </Step>
+  
+  <Step>
+  ## Define Plugin Structure
+  
+  ```typescript
+  // src/index.ts
+  import { Plugin } from "@elizaos/core";
+  import { myAction } from "./actions/myAction";
+  import { myProvider } from "./providers/myProvider";
+  import { myService } from "./services/myService";
+  import { myEvaluator } from "./evaluators/myEvaluator";
+  
+  export const myPlugin: Plugin = {
+    name: "my-plugin",
+    description: "My custom plugin",
+    actions: [myAction],
+    providers: [myProvider],
+    services: [myService],
+    evaluators: [myEvaluator],
+    // Optional: Define database schema
+    schema: {
+      myTable: pgTable('my_table', {
+        id: uuid('id').primaryKey(),
+        data: jsonb('data')
+      })
+    }
+  };
+  
+  export default myPlugin;
+  ```
+  </Step>
+  
+  <Step>
+  ## Implement Components
+  
+  **Action Example**:
+  ```typescript
+  // src/actions/myAction.ts
+  import { Action, IAgentRuntime, Memory, State } from "@elizaos/core";
+  
+  export const myAction: Action = {
+    name: "MY_ACTION",
+    description: "Performs my custom action",
+    similes: ["do something", "execute task"],
+    examples: [
+      [
+        {
+          entityId: "{{agentId}}",
+          content: { text: "Can you do something?" }
+        },
+        {
+          entityId: "{{agentId}}",
+          content: { 
+            text: "I'll do that for you.",
+            action: "MY_ACTION"
+          }
+        }
+      ]
+    ],
+    validate: async (runtime: IAgentRuntime, message: Memory) => {
+      // Validation logic
+      return true;
+    },
+    handler: async (
+      runtime: IAgentRuntime,
+      message: Memory,
+      state?: State,
+      callback?: any
+    ) => {
+      // Action implementation
+      await callback({
+        text: "Action completed!",
+        action: "MY_ACTION"
+      });
+      return true;
+    }
+  };
+  ```
+  </Step>
+  
+  <Step>
+  ## Test Your Plugin
+  
+  ```bash
+  # Run tests
+  bun test
+  
+  # Test in development
+  bun run dev
+  ```
+  </Step>
+  
+  <Step>
+  ## Use in Your Agent
+  
+  ```json
+  {
+    "name": "MyAgent",
+    "plugins": [
+      "@elizaos/plugin-bootstrap",
+      "@elizaos/plugin-sql",
+      "@elizaos/plugin-myservice"
+    ]
+  }
+  ```
+  </Step>
+</Steps>
 
-  <Card title="WhatsApp Plugin">
-    WhatsApp Business API integration **Package**: `@elizaos/plugin-whatsapp` **Installation**:
-    `elizaos plugins add whatsapp` **Features**: - Message handling - Media sharing - Template
-    messages - Business features - Group management **Environment Variables**: - `WHATSAPP_TOKEN`:
-    WhatsApp Business token - `WHATSAPP_PHONE_ID`: Phone number ID - `WHATSAPP_WEBHOOK_TOKEN`:
-    Webhook verify token **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
+## Plugin Architecture
 
-## Blockchain & Web3 Plugins
+### Plugin Components
 
-### Major Blockchains
+ElizaOS plugins can include multiple types of components:
 
-<Cards>
-  <Card title="Solana Plugin">
-    Solana blockchain integration **Package**: `@elizaos/plugin-solana` **Installation**: `elizaos
-    plugins add solana` **Features**: - Wallet operations - Token transfers - NFT management -
-    Program interaction - DeFi integration **Environment Variables**: - `SOLANA_RPC_URL`: Solana RPC
-    endpoint - `SOLANA_PRIVATE_KEY`: Wallet private key - `SOLANA_NETWORK`: Network
-    (mainnet/devnet/testnet) **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
+<Tabs>
+  <Tab value="actions">
+    **Actions** define what your agent can do. They process messages and generate responses.
+    
+    ```typescript
+    interface Action {
+      name: string;
+      description: string;
+      similes: string[];
+      examples: Array<[Message, Message]>;
+      validate: (runtime, message) => Promise<boolean>;
+      handler: (runtime, message, state, callback) => Promise<boolean>;
+    }
+    ```
+    
+    Common actions: REPLY, GENERATE_IMAGE, SEND_MESSAGE, UPDATE_SETTINGS
+  </Tab>
+  
+  <Tab value="providers">
+    **Providers** supply context and data for decision-making.
+    
+    ```typescript
+    interface Provider {
+      name: string;
+      description: string;
+      getContext: (runtime, message, state) => Promise<string>;
+    }
+    ```
+    
+    Common providers: TIME, ENTITIES, RECENT_MESSAGES, CAPABILITIES
+  </Tab>
+  
+  <Tab value="services">
+    **Services** handle background tasks and external integrations.
+    
+    ```typescript
+    interface Service {
+      name: string;
+      description: string;
+      start: () => Promise<void>;
+      stop: () => Promise<void>;
+    }
+    ```
+    
+    Common services: WebSocket connections, scheduled tasks, API listeners
+  </Tab>
+  
+  <Tab value="evaluators">
+    **Evaluators** analyze conversations and trigger specific behaviors.
+    
+    ```typescript
+    interface Evaluator {
+      name: string;
+      description: string;
+      evaluate: (runtime, message, state) => Promise<void>;
+    }
+    ```
+    
+    Common evaluators: sentiment analysis, fact extraction, goal tracking
+  </Tab>
+</Tabs>
 
-<Card title="Ethereum Plugin">
-  Ethereum blockchain integration **Package**: `@elizaos/plugin-ethereum` **Installation**: `elizaos
-  plugins add ethereum` **Features**: - Smart contract interaction - Token operations - DeFi
-  protocols - NFT management - Gas optimization **Environment Variables**: - `ETHEREUM_RPC_URL`:
-  Ethereum RPC endpoint - `ETHEREUM_PRIVATE_KEY`: Wallet private key - `ETHEREUM_NETWORK`: Network
-  (mainnet/goerli/sepolia) **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
+## Plugin Best Practices
 
-  <Card title="Bitcoin Plugin">
-    Bitcoin blockchain integration **Package**: `@elizaos/plugin-bitcoin` **Installation**: `elizaos
-    plugins add bitcoin` **Features**: - Wallet management - Transaction creation - UTXO handling -
-    Multi-signature support - Lightning Network **Environment Variables**: - `BITCOIN_RPC_URL`:
-    Bitcoin RPC endpoint - `BITCOIN_PRIVATE_KEY`: Wallet private key - `BITCOIN_NETWORK`: Network
-    (mainnet/testnet) **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
+### Development Guidelines
 
-### DeFi & Trading
+1. **Always extend core functionality** - Don't duplicate existing actions or providers
+2. **Use TypeScript** - Maintain type safety throughout your plugin  
+3. **Handle errors gracefully** - Never crash the runtime
+4. **Document thoroughly** - Include examples and configuration options
+5. **Test comprehensively** - Unit and integration tests are essential
 
-<Cards>
-  <Card title="Uniswap Plugin">
-    Uniswap DEX integration **Package**: `@elizaos/plugin-uniswap` **Installation**: `elizaos
-    plugins add uniswap` **Features**: - Token swapping - Liquidity provision - Pool monitoring -
-    Price tracking - Yield farming **Environment Variables**: - `UNISWAP_ROUTER_ADDRESS`: Router
-    contract address - `UNISWAP_FACTORY_ADDRESS`: Factory contract address **Dependencies**:
-    `@elizaos/plugin-ethereum`
-  </Card>
+### Performance Considerations
 
-  <Card title="1inch Plugin">
-    1inch aggregator integration **Package**: `@elizaos/plugin-1inch` **Installation**: `elizaos
-    plugins add 1inch` **Features**: - Best price routing - Multi-DEX aggregation - Gas optimization
-    - Limit orders - Transaction analytics **Environment Variables**: - `ONEINCH_API_KEY`: 1inch API
-    key **Dependencies**: `@elizaos/plugin-ethereum`
-  </Card>
-</Cards>
+- **Async operations**: Always use async/await for I/O operations
+- **Rate limiting**: Implement rate limits for external API calls
+- **Memory management**: Clean up resources in service stop methods
+- **Caching**: Use runtime.cacheGet/cacheSet for expensive operations
 
-## Data & Integration Plugins
+### Security Guidelines
 
-### Web Services
+- **Validate inputs**: Always validate message content and parameters
+- **Sanitize outputs**: Ensure responses don't contain sensitive data
+- **API key management**: Use environment variables, never hardcode
+- **Permission checks**: Verify user permissions before actions
 
-<Cards>
-  <Card title="Weather Plugin">
-    Weather data integration and forecasting **Package**: `@elizaos/plugin-weather`
-    **Installation**: `elizaos plugins add weather` **Features**: - Current weather data - Weather
-    forecasts - Location-based queries - Alert notifications - Historical data **Environment
-    Variables**: - `WEATHER_API_KEY`: Weather API key - `WEATHER_PROVIDER`: Provider
-    (openweather/weatherapi) - `WEATHER_UNITS`: Units (metric/imperial) **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
+## External Plugin Integration
 
-<Card title="News Plugin">
-  News aggregation and content delivery **Package**: `@elizaos/plugin-news` **Installation**:
-  `elizaos plugins add news` **Features**: - News aggregation - RSS feed support - Content filtering
-  - Trending topics - Sentiment analysis **Environment Variables**: - `NEWS_API_KEY`: News API key -
-  `NEWS_SOURCES`: Comma-separated news sources - `NEWS_CATEGORIES`: Preferred categories
-  **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
+### Adding External Plugins
 
-  <Card title="Search Plugin">
-    Web search integration **Package**: `@elizaos/plugin-search` **Installation**: `elizaos plugins
-    add search` **Features**: - Web search - Image search - News search - Academic search - Result
-    filtering **Environment Variables**: - `SEARCH_ENGINE`: Search engine (google/bing/duckduckgo) -
-    `GOOGLE_API_KEY`: Google API key - `GOOGLE_CSE_ID`: Custom Search Engine ID **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
+There are several ways to add external plugins to your ElizaOS project:
 
-### Developer Tools
-
-<Cards>
-  <Card title="GitHub Plugin">
-    GitHub repository management and automation **Package**: `@elizaos/plugin-github`
-    **Installation**: `elizaos plugins add github` **Features**: - Repository management - Issue
-    tracking - Pull request automation - Code review - CI/CD integration - Release management
-    **Environment Variables**: - `GITHUB_TOKEN`: GitHub personal access token - `GITHUB_OWNER`:
-    Repository owner - `GITHUB_REPO`: Repository name **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-
-<Card title="GitLab Plugin">
-  GitLab integration for project management **Package**: `@elizaos/plugin-gitlab` **Installation**:
-  `elizaos plugins add gitlab` **Features**: - Project management - Merge request handling -
-  Pipeline monitoring - Issue management - Wiki management **Environment Variables**: -
-  `GITLAB_TOKEN`: GitLab access token - `GITLAB_URL`: GitLab instance URL - `GITLAB_PROJECT_ID`:
-  Project ID **Dependencies**: `@elizaos/plugin-bootstrap`
-</Card>
-
-  <Card title="Docker Plugin">
-    Docker container management **Package**: `@elizaos/plugin-docker` **Installation**: `elizaos
-    plugins add docker` **Features**: - Container management - Image operations - Network
-    configuration - Volume management - Docker Compose support **Environment Variables**: -
-    `DOCKER_HOST`: Docker daemon host - `DOCKER_REGISTRY`: Docker registry URL **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
-
-## Utility Plugins
-
-### System Utilities
-
-<Cards>
-  <Card title="File System Plugin">
-    File operations and management **Package**: `@elizaos/plugin-filesystem` **Installation**:
-    `elizaos plugins add filesystem` **Features**: - File operations - Directory management - File
-    watching - Backup utilities - Compression support **Environment Variables**: - `FS_BASE_PATH`:
-    Base path for operations - `FS_PERMISSIONS`: File permission settings - `FS_MAX_SIZE`: Maximum
-    file size **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-
-<Card title="HTTP Plugin">
-  HTTP request handling and API integration **Package**: `@elizaos/plugin-http` **Installation**:
-  `elizaos plugins add http` **Features**: - HTTP requests - API integration - Webhook handling -
-  Rate limiting - Response caching **Environment Variables**: - `HTTP_TIMEOUT`: Request timeout -
-  `HTTP_RETRY_COUNT`: Retry attempts - `HTTP_USER_AGENT`: User agent string **Dependencies**:
-  `@elizaos/plugin-bootstrap`
-</Card>
-
-  <Card title="Scheduler Plugin">
-    Task scheduling and automation **Package**: `@elizaos/plugin-scheduler` **Installation**:
-    `elizaos plugins add scheduler` **Features**: - Cron scheduling - Task queuing - Retry logic -
-    Job monitoring - Webhook triggers **Environment Variables**: - `SCHEDULER_TIMEZONE`: Default
-    timezone - `SCHEDULER_MAX_JOBS`: Maximum concurrent jobs **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
-
-### Business Applications
-
-<Cards>
-  <Card title="Calendar Plugin">
-    Calendar integration and scheduling **Package**: `@elizaos/plugin-calendar` **Installation**:
-    `elizaos plugins add calendar` **Features**: - Event management - Schedule coordination -
-    Reminder notifications - Multiple calendar support - Time zone handling **Environment
-    Variables**: - `CALENDAR_PROVIDER`: Provider (google/outlook/ical) - `GOOGLE_CALENDAR_API_KEY`:
-    Google Calendar API key - `OUTLOOK_CLIENT_ID`: Outlook client ID **Dependencies**:
-    `@elizaos/plugin-bootstrap`
-  </Card>
-
-<Card title="Email Plugin">
-  Email integration and automation **Package**: `@elizaos/plugin-email` **Installation**: `elizaos
-  plugins add email` **Features**: - Email sending - Inbox monitoring - Template management -
-  Automation workflows - Attachment handling **Environment Variables**: - `EMAIL_PROVIDER`: Provider
-  (gmail/outlook/smtp) - `SMTP_HOST`: SMTP server host - `SMTP_PORT`: SMTP server port -
-  `SMTP_USER`: SMTP username - `SMTP_PASS`: SMTP password **Dependencies**:
-  `@elizaos/plugin-bootstrap`
-</Card>
-
-  <Card title="CRM Plugin">
-    Customer relationship management **Package**: `@elizaos/plugin-crm` **Installation**: `elizaos
-    plugins add crm` **Features**: - Contact management - Lead tracking - Deal management - Activity
-    logging - Reporting **Environment Variables**: - `CRM_PROVIDER`: Provider
-    (salesforce/hubspot/pipedrive) - `CRM_API_KEY`: CRM API key - `CRM_DOMAIN`: CRM domain
-    **Dependencies**: `@elizaos/plugin-bootstrap`
-  </Card>
-</Cards>
-
-## Installation & Management
-
-### CLI Commands
-
+#### Method 1: NPM Package
 ```bash
-# Browse available plugins
-elizaos plugins list
+# Install from npm
+bun add @elizaos/plugin-openai
 
-# Search for specific plugins
-elizaos plugins search weather
-
-# Install a plugin
-elizaos plugins add weather
-
-# Install specific version
-elizaos plugins add weather@1.2.0
-
-# Install from GitHub
-elizaos plugins add https://github.com/user/my-plugin
-
-# Remove a plugin
-elizaos plugins remove weather
-
-# Update all plugins
-elizaos plugins update
-
-# Show installed plugins
-elizaos plugins installed
-```
-
-### Configuration Management
-
-Create a `.env` file for plugin configuration:
-
-```bash
-# Core Configuration
-DATABASE_URL=postgresql://user:pass@localhost/db
-
-# AI Models
-OPENAI_API_KEY=sk-your-openai-key
-ANTHROPIC_API_KEY=sk-ant-your-key
-GOOGLE_API_KEY=your-google-key
-
-# Communication
-DISCORD_BOT_TOKEN=your-discord-token
-TELEGRAM_BOT_TOKEN=your-telegram-token
-SLACK_BOT_TOKEN=xoxb-your-slack-token
-
-# Blockchain
-ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/your-key
-SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
-
-# Services
-WEATHER_API_KEY=your-weather-key
-NEWS_API_KEY=your-news-key
-GITHUB_TOKEN=ghp_your-github-token
-```
-
-### Character Configuration
-
-Add plugins to your agent character:
-
-```typescript
-// character.ts
-import { Character } from "@elizaos/core";
-
-export const character: Character = {
-  name: "MyAgent",
-  description: "An AI agent with comprehensive capabilities",
-  plugins: [
-    // Core plugins (required)
-    "@elizaos/plugin-bootstrap",
-    "@elizaos/plugin-sql",
-
-    // AI model plugins
-    "@elizaos/plugin-openai",
-    "@elizaos/plugin-anthropic",
-
-    // Communication plugins
-    "@elizaos/plugin-discord",
-    "@elizaos/plugin-telegram",
-    "@elizaos/plugin-twitter",
-
-    // Blockchain plugins
-    "@elizaos/plugin-solana",
-    "@elizaos/plugin-ethereum",
-
-    // Utility plugins
-    "@elizaos/plugin-browser",
-    "@elizaos/plugin-github",
-    "@elizaos/plugin-giphy",
-  ],
-
-  // Plugin-specific settings
-  settings: {
-    // OpenAI configuration
-    openai: {
-      model: "gpt-4",
-      temperature: 0.7,
-      max_tokens: 2000,
-    },
-
-    // Discord configuration
-    discord: {
-      enableSlashCommands: true,
-      moderationEnabled: true,
-    },
-
-    // Solana configuration
-    solana: {
-      network: "mainnet",
-      commitment: "confirmed",
-    },
-  },
-};
-```
-
-#### JSON Configuration
-
-```json
+# Add to character
 {
-  "name": "MyAgent",
-  "description": "An AI agent with comprehensive capabilities",
   "plugins": [
     "@elizaos/plugin-bootstrap",
     "@elizaos/plugin-sql",
-    "@elizaos/plugin-openai",
-    "@elizaos/plugin-discord",
-    "@elizaos/plugin-solana"
-  ],
-  "settings": {
-    "openai": {
-      "model": "gpt-4",
-      "temperature": 0.7
-    },
-    "discord": {
-      "enableSlashCommands": true
-    }
+    "@elizaos/plugin-openai"
+  ]
+}
+```
+
+#### Method 2: Git Submodule (Monorepo)
+```bash
+# Add as submodule
+git submodule add https://github.com/org/plugin-custom packages/plugin-custom
+
+# Update and install
+git submodule update --init --recursive
+bun install
+
+# Use as workspace dependency
+{
+  "dependencies": {
+    "@elizaos/plugin-custom": "workspace:*"
   }
 }
 ```
 
-## Plugin Development
-
-### Creating Custom Plugins
-
-Use the CLI to create a new plugin:
-
+#### Method 3: Local Development
 ```bash
-# Create a new plugin
-elizaos create my-plugin -t plugin
+# Link local plugin
+cd /path/to/my-plugin
+bun link
 
-# Navigate to plugin directory
-cd my-plugin
-
-# Start development server
-elizaos dev
-
-# Run tests
-elizaos test
-
-# Build for production
-elizaos build
+cd /path/to/eliza-project  
+bun link @elizaos/plugin-myplugin
 ```
 
-### Plugin Structure
+## Community Plugin Development
 
-```
-my-plugin/
-├── src/
-│   ├── actions/          # Agent actions
-│   ├── providers/        # Context providers
-│   ├── services/         # Background services
-│   ├── evaluators/       # Message evaluators
-│   ├── index.ts          # Main export
-│   └── plugin.ts         # Plugin definition
-├── tests/
-│   ├── actions.test.ts
-│   ├── providers.test.ts
-│   └── integration.test.ts
-├── images/
-│   └── plugin-icon.png
-├── package.json
-├── tsconfig.json
-└── README.md
-```
+### Contributing Plugins
 
-### Plugin Interface
+1. **Follow the plugin specification**: Ensure compatibility with the Plugin interface
+2. **Add comprehensive tests**: Include unit and integration tests
+3. **Document thoroughly**: README, examples, and API documentation
+4. **Submit for review**: Create a PR to the ElizaOS repository
 
-```typescript
-// src/plugin.ts
-import { Plugin } from "@elizaos/core";
+### Plugin Ideas
 
-export const myPlugin: Plugin = {
-  name: "my-plugin",
-  description: "Custom plugin functionality",
+The community is actively developing plugins for:
 
-  // Configuration
-  config: {
-    API_KEY: process.env.MY_API_KEY,
-    BASE_URL: process.env.MY_BASE_URL || "https://api.example.com",
-  },
-
-  // Initialization
-  init: async (config, runtime) => {
-    // Initialize plugin
-    if (!config.API_KEY) {
-      throw new Error("API_KEY is required");
-    }
-  },
-
-  // Components
-  actions: [
-    // Define actions
-  ],
-
-  providers: [
-    // Define providers
-  ],
-
-  services: [
-    // Define services
-  ],
-
-  evaluators: [
-    // Define evaluators
-  ],
-};
-```
-
-## Publishing Plugins
-
-### Preparation
-
-Before publishing:
-
-1. **Test Thoroughly**: Run all tests and ensure functionality
-2. **Documentation**: Write comprehensive README and examples
-3. **Assets**: Include plugin icon and screenshots
-4. **Validation**: Use `elizaos plugins validate` to check structure
-
-### Publishing Process
-
-```bash
-# Validate plugin structure
-elizaos plugins validate
-
-# Test publishing (dry run)
-elizaos plugins publish --dry-run
-
-# Publish to registry
-elizaos plugins publish
-
-# Publish to npm only
-elizaos plugins publish --npm-only
-```
-
-## Community & Support
+- **Communication**: Discord, Telegram, Slack, Teams
+- **Blockchain**: Ethereum, Solana, Bitcoin integrations  
+- **AI/ML**: Various model providers and embeddings
+- **Data**: Weather, news, search APIs
+- **Productivity**: Calendar, email, task management
+- **Entertainment**: Games, media, content generation
 
 ### Getting Help
 
-- **Documentation**: [Plugin Development Guide](/docs/plugins/creating-plugins)
-- **Community**: [Discord Server](https://discord.gg/elizaos)
-- **Issues**: [GitHub Issues](https://github.com/elizaos/eliza/issues)
-- **Examples**: [Plugin Examples](https://github.com/elizaos/eliza/tree/main/packages)
+- **Documentation**: [Plugin Development Guide](/docs/plugins/plugin-development)
+- **Examples**: Check existing plugins in `packages/` directory
+- **Community**: Join the ElizaOS Discord for support
+- **Issues**: Report bugs and request features on GitHub
 
-### Contributing
 
-1. **Bug Reports**: Submit detailed bug reports
-2. **Feature Requests**: Suggest new plugin capabilities
-3. **Code Contributions**: Submit pull requests
-4. **Documentation**: Help improve documentation
-5. **Testing**: Test new plugins and provide feedback
+## Quick Start Examples
 
-The ElizaOS plugin ecosystem continues to grow with contributions from developers worldwide. With
-130+ plugins available, there's extensive functionality ready to enhance your agents, and the
-community is always working to expand the ecosystem further.
+### Basic Agent with OpenAI
+
+```typescript
+// character.ts
+export const character = {
+  name: "Assistant",
+  description: "A helpful AI assistant",
+  plugins: [
+    "@elizaos/plugin-bootstrap",
+    "@elizaos/plugin-sql",
+    "@elizaos/plugin-openai"
+  ],
+  settings: {
+    model: "gpt-4",
+    temperature: 0.7
+  }
+};
+```
+
+```bash
+# .env
+OPENAI_API_KEY=sk-your-key
+POSTGRES_URL=postgresql://localhost/eliza
+```
+
+### Local AI Agent
+
+```json
+{
+  "name": "LocalAgent",
+  "description": "Privacy-focused local AI",
+  "plugins": [
+    "@elizaos/plugin-bootstrap",
+    "@elizaos/plugin-sql",
+    "@elizaos/plugin-local-ai"
+  ],
+  "settings": {
+    "model": "llama2"
+  }
+}
+```
+
+```bash
+# Start Ollama first
+ollama run llama2
+
+# .env  
+OLLAMA_HOST=http://localhost:11434
+```
+
+### TEE-Enabled Agent
+
+```typescript
+// For secure, verifiable operations
+export const character = {
+  name: "SecureAgent",
+  plugins: [
+    "@elizaos/plugin-bootstrap",
+    "@elizaos/plugin-sql",
+    "@elizaos/plugin-tee",
+    "@elizaos/plugin-redpill"
+  ]
+};
+```
+
+## Resources
+
+- [Plugin Development Guide](/docs/plugins/plugin-development) - Comprehensive development guide
+- [Creating Plugins](/docs/plugins/creating-plugins) - Quick start tutorial
+- [Plugin Templates](/docs/plugins/plugin-templates) - Ready-to-use templates
+- [Plugin Testing](/docs/plugins/plugin-testing) - Testing strategies and tools
+- [Bootstrap Plugin Documentation](/docs/plugins/plugin-bootstrap) - Core plugin reference
+- [SQL Plugin Documentation](/docs/plugins/plugin-sql) - Database plugin reference
+- [GitHub Repository](https://github.com/elizaos/eliza) - Source code and examples
